--- a/app/src/main/res/layout/activity_main_scpt.xml
+++ b/app/src/main/res/layout/activity_main_scpt.xml
@@ -15,16 +15,15 @@
     <EditText
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         android:id="@+id/entrytext"
         android:background="@color/jade_green"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView" />
+        android:layout_alignParentEnd="true" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
@@ -35,16 +34,23 @@
         android:layout_marginTop="10dp"
         android:fontFamily="Arial"
         android:textColor="@color/Black"
-        />
+        android:id="@+id/textView4" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose a file"
         android:id="@+id/button_filechoose"
-        android:layout_marginTop="40dp"
         android:fontFamily="Arial"
         android:textColor="@color/Black"
-        android:layout_below="@+id/entrytext"
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="My words"
+        android:id="@+id/button_words"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -52,9 +58,8 @@
         android:layout_height="wrap_content"
         android:text="Start Tokenize"
         android:id="@+id/button_token"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_above="@+id/button_words"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
