--- a/app/src/main/res/layout/activity_main_scpt.xml
+++ b/app/src/main/res/layout/activity_main_scpt.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:id="@+id/entrytext"
         android:background="@color/jade_green"
         android:layout_alignParentLeft="true"
@@ -27,7 +27,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:text="                                                   Or"
+        android:text="                                                        Or"
         android:layout_below="@+id/entrytext"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -50,16 +50,18 @@
         android:layout_height="wrap_content"
         android:text="My words"
         android:id="@+id/button_words"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/button_token"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="64dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start Tokenize"
         android:id="@+id/button_token"
-        android:layout_above="@+id/button_words"
+        android:layout_below="@+id/button_filechoose"
         android:layout_centerHorizontal="true" />
+
 
 
 </RelativeLayout>
